Scaling of display on Play Scene

--- a/src/tleng2/settings.json
+++ b/src/tleng2/settings.json
@@ -1,7 +1,7 @@
 { 
     "PYGAME_HIDE_SUPPORT_PROMPT" : "hide",
     "TLENG2_HIDE_SUPPORT_PROMPT" : "hide",
-    "FPS" : "60",
+    "FPS" : 60,
     "WINDOW_RESOLUTION" : [1280,720],
     "DISPLAY_RESOLUTION" : [1280,720],
     "FONT" : null,
