--- a/assets/settings.json
+++ b/assets/settings.json
@@ -1,5 +1,6 @@
 {
     "CAR": "BLUE",
-    "FPS": 60,
-    "MUSIC_VOLUME" : 0.5
+    "FPS": 200,
+    "MUSIC_VOLUME" : 0.5,
+    "SPRITESTACK_OPTIMIZATION": true
 }
